@@ -2504,7 +2504,7 @@ color of the light source for <a>filter primitives</a> <a>'feDiffuseLighting'</a
   <tbody>
     <tr valign="baseline">
       <td><em>Value:</em>  </td>
-      <td>currentColor | <a>&lt;color&gt;</a> [<a>&lt;icccolor&gt;</a>] <p class="issue">Should icccolor be optional?</p></td>
+      <td>currentColor | <a>&lt;color&gt;</a> <a>&lt;icccolor&gt;</a>?</td>
     </tr>
     <tr valign="baseline">
       <td><em>Initial:</em>  </td>
@@ -4133,8 +4133,7 @@ properties.</p>
   <tbody>
     <tr valign="baseline">
       <td><em>Value:</em>  </td>
-      <td>currentColor | <a>&lt;color&gt;</a> [<a>&lt;icccolor&gt;</a>]
-        <p class="issue">Should icccolor be optional?</p></td>
+      <td>currentColor | <a>&lt;color&gt;</a> <a>&lt;icccolor&gt;</a>?</td>
     </tr>
     <tr valign="baseline">
       <td><em>Initial:</em>  </td>
