@@ -3109,8 +3109,7 @@
     <tr valign=baseline>
      <td><em>Value:</em>  
 
-     <td>currentColor | <a>&lt;color&gt;</a> [<a>&lt;icccolor&gt;</a>]
-      <p class=issue>Should icccolor be optional?
+     <td>currentColor | <a>&lt;color&gt;</a> <a>&lt;icccolor&gt;</a>?
 
     <tr valign=baseline>
      <td><em>Initial:</em>  
@@ -7719,8 +7718,7 @@ Extended by two pixels using "duplicate":
     <tr valign=baseline>
      <td><em>Value:</em>  
 
-     <td>currentColor | <a>&lt;color&gt;</a> [<a>&lt;icccolor&gt;</a>]
-      <p class=issue>Should icccolor be optional?
+     <td>currentColor | <a>&lt;color&gt;</a> <a>&lt;icccolor&gt;</a>?
 
     <tr valign=baseline>
      <td><em>Initial:</em>  
