@@ -3,6 +3,10 @@ Changes for Filter Effects specification
 
 2012-06-19  Dirk Schulze  <dschulze@adobe.com>
 
+- *-color properties follow the syntax of CSS Values and Units now
+
+2012-06-19  Dirk Schulze  <dschulze@adobe.com>
+
 - updated syntax for mix(..) function
 
 2012-06-18  Dirk Schulze  <dschulze@adobe.com>
